feat: service for obtain all customers with higher amount than the received one + cache fix
